# codesnip

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md
.github/workflows/: ci.yml
codesnip/: Cargo.toml
codesnip/examples/: math.rs
codesnip/src/: lib.rs  mapping.rs  parse.rs  source.rs  verify.rs
codesnip_attr/: Cargo.toml
codesnip_attr/src/: lib.rs
codesnip_core/: Cargo.toml
codesnip_core/src/: entry.rs  ext.rs  format.rs  lib.rs  map.rs  parse.rs
src/: lib.rs  mapping.rs  verify.rs
