[package]
name = "codesnip"
version = "0.3.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "snippet bundle tool"
repository = "https://github.com/to-omer/codesnip"
documentation = "https://docs.rs/codesnip"

[[bin]]
name = "cargo-codesnip"
path = "src/main.rs"
doc = false

[[example]]
name = "math"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
cargo_metadata = "0.14.2"
codesnip_attr = { version = "0.2.0", path = "../codesnip_attr" }
codesnip_core = { version = "0.3.0", path = "../codesnip_core" }
console = "0.15.0"
indicatif = "0.16.2"
rayon = "1.5.3"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
structopt = "0.3.26"
syn = { version = "1.0.95", features = ["full"] }
tempfile = "3.3.0"
