[package]
name = "codesnip"
version = "0.3.2"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "snippet bundle tool"
repository = "https://github.com/to-omer/codesnip"
documentation = "https://docs.rs/codesnip"

[[bin]]
name = "cargo-codesnip"
path = "src/main.rs"
doc = false

[[example]]
name = "math"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.65"
bincode = "1.3.3"
cargo_metadata = "0.15.0"
codesnip_attr = { version = "0.2.2", path = "../codesnip_attr" }
codesnip_core = { version = "0.3.1", path = "../codesnip_core" }
console = "0.15.1"
indicatif = "0.17.1"
rayon = "1.5.3"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
structopt = "0.3.26"
syn = { version = "1.0.100", features = ["full"] }
tempfile = "3.3.0"
