[package]
name = "codesnip"
version = "0.4.1"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "snippet bundle tool"
repository = "https://github.com/to-omer/codesnip"
documentation = "https://docs.rs/codesnip"

[[bin]]
name = "cargo-codesnip"
path = "src/main.rs"
doc = false

[[example]]
name = "math"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.99"
bincode = { version = "2.0.1", features = ["alloc", "serde"] }
cargo_metadata = "0.22.0"
codesnip_attr = { version = "0.4.0", path = "../codesnip_attr" }
codesnip_core = { version = "0.4.0", path = "../codesnip_core" }
console = "0.16.1"
git2 = "0.20.2"
indicatif = "0.18.0"
rayon = "1.11.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = "3.14.0"
structopt = "0.3.26"
syn = { version = "2.0.106", features = ["full"] }
tempfile = "3.22.0"
toml = "0.9.5"
