[package]
name = "codesnip_attr"
version = "0.2.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "snippet bundle tool"
repository = "https://github.com/to-omer/codesnip_attr"
documentation = "https://docs.rs/codesnip_attr"

[lib]
proc-macro = true
doc = false

[dependencies]
codesnip_core = { version = "0.3.0", path = "../codesnip_core" }
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.95", features = ["full"] }
