[package]
name = "codesnip_attr"
version = "0.4.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "snippet bundle tool"
repository = "https://github.com/to-omer/codesnip"
documentation = "https://docs.rs/codesnip_attr"

[lib]
proc-macro = true
doc = false

[dependencies]
codesnip_core = { version = "0.4.0", path = "../codesnip_core", optional = true }
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }

[features]
check = ["codesnip_core"]
