[package]
name = "codesnip_core"
version = "0.3.1"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "snippet bundle tool"
repository = "https://github.com/to-omer/codesnip_core"
documentation = "https://docs.rs/codesnip_core"

[dependencies]
proc-macro2 = "1.0.44"
quote = "1.0.21"
rust_minify = "0.1.0"
serde = { version = "1.0.145", features = ["derive"] }
syn = { version = "1.0.100", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
] }
thiserror = "1.0.36"

[[example]]
name = "mod_path"
path = "examples/mod_path/lib.rs"
crate-type = ["lib"]

[[example]]
name = "mod_path_expected"
crate-type = ["lib"]
